import type { Meta, StoryObj } from '@storybook/react-vite';
import { Label } from '../typography/label/Label';
import { useState } from 'react';
import { Button, Textarea } from '@udir-design/react/alpha';
import { expect, userEvent, within } from 'storybook/test';

const meta: Meta<typeof Textarea> = {
  component: Textarea,
  tags: ['beta'],
  parameters: {
    layout: 'centered',
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
      maxWidth: '20rem',
    },
  },
};

export default meta;
type Story = StoryObj<typeof Textarea>;

export const Preview: Story = {
  args: {
    disabled: false,
    readOnly: false,
    rows: 3,
    cols: 20,
    id: 'my-textarea',
  },
  render: (args) => (
    <>
      <Label htmlFor={args.id}>Label</Label>
      <Textarea {...args} />
    </>
  ),
  play: async ({ canvasElement, step, args }) => {
    const canvas = within(canvasElement);
    const textarea = canvas.getByRole('textbox');

    await step('Textarea is rendered', async () => {
      expect(textarea).toBeInTheDocument();
    });

    await step('User can focus the textarea', async () => {
      await userEvent.click(textarea);
      expect(textarea).toHaveFocus();
    });

    await step('User can blur the textarea', async () => {
      await userEvent.tab();
      expect(textarea).not.toHaveFocus();
    });

    if (!args.disabled && !args.readOnly) {
      await step('User can type in the textarea', async () => {
        await userEvent.clear(textarea);
        await userEvent.type(textarea, 'Hello World');
        expect(textarea).toHaveValue('Hello World');
      });
    } else {
      await step(
        'Textarea is disabled or read-only so it should not be editable',
        async () => {
          expect(textarea).toBeDisabled();
        },
      );
    }
  },
};

export const FullWidth: Story = {
  args: {
    id: 'my-textarea',
  },
  parameters: {
    customStyles: {
      maxWidth: '100%',
    },
  },
  render: (args) => (
    <>
      <Label htmlFor={args.id}>Beskriv bekymringen din</Label>
      <Textarea {...args} />
    </>
  ),
};

export const Controlled: Story = {
  args: {
    id: 'textfield-controlled',
  },
  parameters: {
    customStyles: {
      display: 'flex',
      flexDirection: 'column',
      gap: 'var(--ds-size-2)',
    },
  },
  render: (args) => {
    const [value, setValue] = useState(`${args.value || ''}`);

    return (
      <>
        <Label htmlFor={args.id}>Beskriv bekymringen din</Label>
        <Textarea
          {...args}
          rows={4}
          value={value}
          onChange={(
            e: React.ChangeEvent<HTMLInputElement | HTMLTextAreaElement>,
          ) => setValue(e.target.value)}
        />
        <Button
          variant="secondary"
          onClick={() => setValue('')}
          style={{ marginTop: 'var(--ds-size-6)' }}
        >
          Tøm feltet
        </Button>
      </>
    );
  },
};
