// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    id="<removed>"
    rows="4"
    style="<removed>"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
  style="<removed>"
>
  Tøm feltet
</button>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled Textarea
  </label>
  <textarea
    id="<removed>"
    disabled
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="<removed>"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Full Width 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    id="<removed>"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="<removed>"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Read-Only Textarea
  </label>
  <textarea
    id="<removed>"
    readonly
    style="<removed>"
  >
  </textarea>
</ds-field>
`;
